update about me

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,7 +30,7 @@
     <meta name="description" content="{{ page.description }}">
     <meta name="keyword" content="
     {% if page.keywords %}page.keywords,{% endif %}{{ site.keyword }}">
-    <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico">
+    <link rel="shortcut icon" href="{{ site.baseurl }}/img/about-me.jpg">
 
     <title>{% if page.title %}{{ page.title }} {% else %}{{ site.SEOTitle }}{% endif %}</title>
 
