--- a/_includes/star.html
+++ b/_includes/star.html
@@ -1,5 +1,5 @@
-<a class="give-me-a-star" style="display: block; margin-top: 20px; color: #337ab7; font-size: 20px;" href="https://github.com/rainyulei/rainyulei.github.io/">
-    你的支持，是对博主最大的鼓励。猛戳这里，右上角给点个Star吧！>>>
+<a class="give-me-a-star" style="display: block; margin-top: 20px; color: #337ab7; font-size: 20px;" href="https://github.com/kikoxxxi/kikoxxxi.github.io/">
+    Star here>>>
     <br>
     <br>
 </a>
